Fixed scrollbar in skills select

--- a/frontend/src/app/profile/select-with-search/select-with-search.component.scss
+++ b/frontend/src/app/profile/select-with-search/select-with-search.component.scss
@@ -24,7 +24,7 @@
         outline: none;
         padding: 0.5rem 0.5rem;
         background-color: transparent;
-        width: 100%;
+        //width: 100%;
     }
 
     &.opened {
@@ -45,19 +45,21 @@
     font-weight: 300;
 }
 
-.wrapper {
-    overflow: visible;
-    border-left: 1px solid var(--main-accent-color);
-    border-right: 1px solid var(--main-accent-color);
-    border-bottom: 1px solid var(--main-accent-color);
-    border-radius: 0 0 10px 10px;
-    box-sizing: border-box;
+.dropdown-input {
+    font-size: var(--font-size--main);
+    font-family: var(--main-font-family);
 }
 
 .dropdown-list {
     transition: .3s ease;
     background: var(--white);
     list-style: none;
+    border-left: 1px solid var(--main-accent-color);
+    border-right: 1px solid var(--main-accent-color);
+    border-bottom: 1px solid var(--main-accent-color);
+    border-radius: 0 0 10px 10px;
+    box-sizing: border-box;
+    overflow: hidden;
 
     position: absolute;
     bottom: 0;
@@ -69,11 +71,11 @@
     transform: translateY(100%);
 
     & .dropdown-item {
-        box-sizing: border-box;
+        box-sizing: content-box;
         padding: 0.5rem 0.5rem;
-        width: calc(100% - 4px);
         cursor: pointer;
         font-weight: 300;
+        overflow: hidden;
 
         &.no-scroll {
             width: 100%
@@ -83,29 +85,28 @@
             background-color: rgba(var(--main-accent-color-rgb), 0.2);
         }
 
-        border-radius: 0 0 10px 10px;
-
     }
 
     &__scroll {
         overflow-x: visible;
-        width: calc(100% + 10px);
-
+        // margin-bottom: 3px;
+        // margin-right: 1px;
+        
         &.no-scroll {
             width: 100%;
         }
 
         &::-webkit-scrollbar {
-            width: 6px;
+            width: 5px;    
+            box-sizing: border-box;
         }
 
         &::-webkit-scrollbar-button {
-            display: none;
+            display: none;          
         }
 
         &::-webkit-scrollbar-track {
             display: none;
-            background-color: transparent;
         }
         &::-webkit-scrollbar-thumb {
             background: var(--main-accent-color); 
